<resources>
    <string name="app_name">小天气</string>

    <string name="widget1_description" translatable="false">长形小部件</string>
    <string name="widget2_description" translatable="false">方形小部件</string>

    <string name="widget_unknown">未知</string>
    <string name="widget_updating">更新中。。。</string>
    <string name="widget_update_failed">更新失败</string>
    <string name="widget_update_time">更新</string>
    <string name="updateTime" translatable="false">06–13 15:10</string>
    <string name="district">本地</string>
    <string name="tomorrow">明天</string>
    <string name="overmorrow">后天</string>
    <string name="temp_example" translatable="false">25°</string>
    <string name="temp_rang_example" translatable="false">22 ~ 28°</string>
    <string name="other_info" translatable="false">80% PM25:20 PM10:20</string>
    <string name="location_tips">请到设置里开启应用的定位权限</string>
    <string name="notification_tips">请到设置里开启应用的通知权限，否则没有天气预警通知</string>
    <string name="location_failed">若获取权限后依旧定位失败，请关闭应用再打开，重新更新位置。</string>
    <string name="tips">若没有数据，请移除这个小部件，然后添加新的</string>
    <string name="setting_permission">去开启权限</string>
    <string name="icon_description">预警级别图标</string>
    <string name="update_tips">本APP只有桌面小部件，每小时自动刷新一次，点击小部件可立即刷新天气。Github@JARK006</string>
    <string name="app_data">定位SDK由“高德”提供\n天气数据由“和风天气”及“彩云天气”提供</string>
    <string name="open_sources" translatable="false">开源地址</string>

    <string name="privacy_content" translatable="false">
更新日期：2023/09/20\n\n
导言\n\n
小天气 是一款由 JARK006 （以下简称“我们”）提供的产品。 您在使用我们的服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们的服务时，我们如何收集、使用、储存和分享这些信息，以及我们为您提供的访问、更新、控制和保护这些信息的方式。\n\n
您使用或继续使用我们的服务，即意味着同意我们按照本《隐私政策》收集、使用、储存和分享您的相关信息。\n\n
如对本《隐私政策》或相关事宜有任何问题，请通过 jark006@qq.com 与我们联系。\n\n\n

一、 我们收集的信息\n\n
我们收集的信息仅限定位信息及网络状态信息，除了位置信息需要上传服务获取天气数据以外，其他任何数据均保存在本地，不会上传。\n\n
(1) 我们利用采集的设备定位信息仅用于获取该位置的实时天气数据，向服务器发送的数据仅含“经纬度”数据，不含其他关于您设备及个人的任何信息。\n\n
(2) 我们依据网络状态信息进行辅助定位。\n\n

二、 权限使用\n\n
我们将在运行应用程序使用以下权限：\n\n
(1) 通知权限，仅用于推送天气预警信息\n
android.permission.POST_NOTIFICATIONS\n\n
(2) 网络状态及联网权限，用于服务器通信\n
android.permission.ACCESS_NETWORK_STATE
android.permission.INTERNET\n\n
(3) 定位相关权限，用于获取设备位置信息\n
android.permission.ACCESS_COARSE_LOCATION
android.permission.ACCESS_FINE_LOCATION
android.permission.ACCESS_LOCATION_EXTRA_COMMANDS
android.permission.ACCESS_BACKGROUND_LOCATION\n\n
(4) 前台服务权限，用于在后台运行\n
android.permission.FOREGROUND_SERVICE\n\n
我们利用这些权限确保各项功能正常，不会干扰设备正常运作，且不会用于读取或分析您的私密信息。\n\n\n

三、 与第三方服务提供商共享设备信息\n\n
(1) 本引用引入高德定位SDK,可能会收集设备的周围WiFi名称、设备最终公网出口IP等信息用于辅助定位，具体隐私协议详见：
https://developer.amap.com/pages/privacy/\n\n
(2) 本应用使用“和风天气”及“彩云天气”提供的服务，仅向其服务器发送经纬度数据获取该位置的实时天气数据，不会泄漏包含任何关于设备及个人的信息。\n\n\n

四、 您的权限\n\n
如果您对我们的应用权限和安全策略有任何顾虑和疑惑，可随时通过 jark006@qq.com 向我们反馈以及获得帮助。\n\n\n

五、 变更\n\n
我们可能适时修订本《隐私政策》的条款。当变更发生时，我们会在版本更新时向您提示新的《隐私政策》，并向您说明生效日期。请您仔细阅读变更后的《隐私政策》内容，若您继续使用我们的服务，即表示您同意我们按照更新后的《隐私政策》处理您的个人信息。\n\n

    </string>
    <string name="privacy_title" translatable="false">隐私协议</string>
    <string name="widget_caiyun1_description">彩云大型</string>
    <string name="hour_temp" translatable="false">08H[ 24 25 26 ]12H</string>
    <string name="widget_caiyun2_description">彩云小型</string>
    <string name="alertTitle">近期预警</string>
    <string name="longitudeText">经度</string>
    <string name="latitudeText">纬度</string>
    <string name="areaTextHint">地名，随便写</string>
    <string name="areaText">地区</string>
    <string name="saveText">保存当前设置</string>
    <string name="settingText">设置</string>
    <string name="pickerText">在线拾取坐标</string>
    <string name="quarkpanText">夸克盘</string>
    <string name="baidupanText">百度盘 密码:6666</string>

</resources>