<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingHorizontal="2dp"
            android:text="@string/updateTime"
            android:textColor="@color/white"
            android:textSize="6sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tips"
            android:textColor="@color/white"
            android:textSize="6sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/district"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/today_tem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp_example"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="2dp"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/tomorrowImg"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:contentDescription="@string/tomorrow"
                    android:gravity="center"
                    android:paddingHorizontal="2dp"
                    app:srcCompat="@drawable/ic_cloud" />

            <TextView
                android:id="@+id/tomorrowRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp_example"
                android:textColor="@color/white"
                android:textSize="11sp"/>
            <TextView
                android:id="@+id/tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp_example"
                android:textColor="@color/white"
                android:textSize="12sp"/>

        </LinearLayout>
        </LinearLayout>

</LinearLayout>